Fixed alignment

--- a/src/css/body.styl
+++ b/src/css/body.styl
@@ -29,10 +29,10 @@ body
         margin-top -0.5rem
   
 .header
-    margin-top -8rem
+    margin-top -2rem
     text-align center
     width 100%
-    height 16rem
+    height 18rem
     // border-bottom 2px solid text-black
     display flex
     flex-direction column
